ui/gfx/color_space.h
@@ -22,6 +22,7 @@ struct ParamTraits;
 namespace gfx {
 
 class ICCProfile;
+class ICCProfileCache;
 
 // Used to represet a color space for the purpose of color conversion.
 // This is designed to be safe and compact enough to send over IPC
@@ -230,6 +231,7 @@ class COLOR_SPACE_EXPORT ColorSpace {
   sk_sp<SkColorSpace> icc_profile_sk_color_space_;
 
   friend class ICCProfile;
+  friend class ICCProfileCache;
   friend class ColorTransform;
   friend class ColorTransformInternal;
   friend class ColorSpaceWin;
