ui/gfx/icc_profile.h
@@ -51,11 +51,6 @@ class COLOR_SPACE_EXPORT ICCProfile {
   static ICCProfile FromCGColorSpace(CGColorSpaceRef cg_color_space);
 #endif
 
-  // This will recover a ICCProfile from a compact ColorSpace representation.
-  // Internally, this will make an effort to create an identical ICCProfile
-  // to the one that created |color_space|, but this is not guaranteed.
-  static ICCProfile FromColorSpace(const gfx::ColorSpace& color_space);
-
   // Create directly from profile data.
   static ICCProfile FromData(const void* icc_profile, size_t size);
 
@@ -102,25 +97,19 @@ class COLOR_SPACE_EXPORT ICCProfile {
   friend ICCProfile ICCProfileForTestingColorSpin();
   friend ICCProfile ICCProfileForTestingGenericRGB();
   friend ICCProfile ICCProfileForTestingSRGB();
-  friend ICCProfile ICCProfileForTestingNoAnalyticTrFn();
-  friend ICCProfile ICCProfileForTestingA2BOnly();
-  friend ICCProfile ICCProfileForTestingOvershoot();
   friend ICCProfile ICCProfileForLayoutTests();
   static const uint64_t test_id_adobe_rgb_;
   static const uint64_t test_id_color_spin_;
   static const uint64_t test_id_generic_rgb_;
   static const uint64_t test_id_srgb_;
-  static const uint64_t test_id_no_analytic_tr_fn_;
-  static const uint64_t test_id_a2b_only_;
-  static const uint64_t test_id_overshoot_;
 
   // Populate |icc_profile| with the ICCProfile corresponding to id |id|. Return
   // false if |id| is not in the cache.
   static bool FromId(uint64_t id, ICCProfile* icc_profile);
 
   // This method is used to hard-code the |id_| to a specific value, and is
-  // used by test methods to ensure that they don't conflict with the values
-  // generated in the browser.
+  // used by layout test methods to ensure that they don't conflict with the
+  // values generated in the browser.
   static ICCProfile FromDataWithId(const void* icc_profile,
                                    size_t size,
                                    uint64_t id);
